# template-python

./: .gitignore  Doxyfile  README.md  main.spec  pyproject.toml
.github/workflows/: python-ci.yml
src/project/: config.py  logic.py  main.py  models.py  scripts.py  utils.py
src/project/api/: routes.py
src/project/cli/: main.py
tests/: conftest.py  test_logic.py
